# future-wood-transfer

./: .gitignore  Dockerfile_CUDA  Dockerfile_cuda  Dockerfile_ros  Dockerfile_test  README.md  fwt_conda_env.yml  fwt_conda_ros_env.yml
.claude/: settings.json
Labeling/: CocoDatasetGUI.py
ROS/: entrypoint.sh
SegFormer/: segformer_training.py  txt2maskimg.py
Viewer/: YoloDetectionViewer.py  YoloMaskViewer.py
baseline/: baseline_cityscapes.py  yolo_baseline_test.py
baseline/mask2former/: mask2former_dataset.py  mask2former_dataset_multiclass.py
baseline/yolo/: yolo_dataset.py
data/: aiforest_coco8 copy.yaml  aiforest_coco8.yaml  aiforest_multiroad.yaml  aiforest_road.yaml  aiforest_road_noaug.yaml
data/converters/: change_class_number.py  cityscape_image_copy.py  convert_all_images.py  get_colors.py  pixel_to_coco.py  remove_augmentation.py  split_and_augment_data.py
data/rosbag/: Dockerfile  docker_rosbag_images.py  rosbag_to_image_depth.py  svo_to_image_detph.py
dataset_converter/: change_class_number.py  cityscape_to_yolo.py  coco_remove_classes.py  coco_to_yolo.py  copy_image.py  create_intersection_class.py  create_intersection_dataset.py  create_mask.py  data_augmentation.py  image_augemntation.py  lane_smoothing.py  split_and_augment_data.py  split_yolo.py  yolo_to_coco.py
detection/: Dockerfile  DockerfileYOLO  README.md  bag_run.sh  config.yaml  fwt_road_segmentation.yml  main.py  requirements.txt  road_detection.py  ros_entrypoint.sh  ros_listener.py  rviz2_config.rviz
detection/docker/: Dockerfile  Dockerfile_humble_yolo  Dockerfile_test  Dockerfile_yolo_mask  bag1_run.sh  bag2_run.sh  entrypoint_ros_tools.sh
detection/draw/: create_image.py
detection/image/: mask.py  skeleton.py  visualization.py
detection/models/: yolo.py
detection/models/baseline/: baseline.py
detection/models/mask2former/: Dockerfile  mask2former.py
detection/models/yolo/: Dockerfile  yolo.py
detection/path/: boundary_identification.py  line_identification.py  path_utils.py  point_function.py
detection/pointcloud/: create_pointcloud.py  depth_to_pointcloud.py  pointcloud_converter.py  pointcloud_edge_detection.py  pointcloud_transformation.py  pointcloud_utils.py
detection/road/: line_intersection.py  road_utils.py
detection/ros/: listener.py  ros_listener.py  ros_pose.py
detection/ros/legacy/: ros_publisher.py
detection/ros/publishers/: mask_publisher.py  pointcloud_publisher.py  road_lines_publisher.py
detection/ros/road_lines_msg/: CMakeLists.txt  bridge_mapping_rules.yaml  package.xml
detection/ros_lis/: ros_listener.py  ros_pose.py  ros_publisher.py
detection/ros_tools/: Dockerfile  ros_listener.py  ros_publisher.py
detection/ros_tools/publisher/: ros_mask_publisher.py  ros_path_publisher.py  ros_pointcloud_publisher.py  ros_road_lines_publisher.py
detection/ros_tools/road_lines_msg/: CMakeLists.txt  package.xml
detection/ros_tools/road_lines_msg/ros1/: CMakeLists.txt  package.xml
detection/ros_tools/road_lines_msg/scripts/: publish_road_lines.py
detection/tools/: contour.py  line_indentification.py  line_intersection.py  mask.py  road_information.py  skeleton.py
detection/utils/: boundary_identification_utils.py  path_utils.py  road_utils.py  timer_utils.py  transformation_utils.py
docker/: Dockerfile
docs/: tasks.md
intersection/: intersection_detection.py  intersection_detection_new.py  yolo_predictor.py
labeling/SAM/: sam_labeling.py
mask2former/: create_training_data.py  mask2former_training.py  mask2former_training_new.py  yolo2coco.py  yolo_to_coco.py
object_detection/: README.md  config.yaml  main.py  requirements.txt
object_detection/docker/: Dockerfile  ros_entrypoint.sh
object_detection/models/yolo/: yolo.py
object_detection/ros/: listener.py
object_detection/ros/object_detection_msg/: CMakeLists.txt  package.xml
object_detection/ros/object_detection_msg/msg/: DetectedObject.msg
object_detection/ros/publishers/: detection_publisher.py
output_mask2former_panoptic/: events.out.tfevents.1749116396.simon-linux.20635.0  log.txt  metrics.json
road_line_merging/road_lines_msg/: package.xml
road_yolo/utils/: road_seg_trainer.py  yolo_road_seg_model.py  yolo_seg_dataset.py
ros/bridge/: Dockerfile  Dockerfile_01  entrypoint.sh
ros/bridge/ros1_humble_bridge_template-master/ros1_bridge/road_lines_msg/ros1/: package.xml
ros/docker/: Dockerfile  entrypoint.sh
ros/road_lines/: Dockerfile  frames_2025-07-07_18.56.48.gv  requirements.txt  road_line_listener.py  ros_entrypoint.sh
ros_bridge/road_lines_msg/ros1/: CMakeLists.txt
ros_bridge/road_lines_msg/ros2/: bridge_mapping_rules.yaml
rosbag_converter/: rosbag_to_image.py  rosbag_to_svo.py  svo_recording.py  svo_to_image_detph.py
rosbag_pointcloud/: README.md  bag_reader.py  config.yaml  fwt_rosbag_viewer.yml  main.py  pointcloud_generator.py  requirements.txt  viewer.py
rviz/: fwt_config.rviz
tools/intersection/: create_intersection.py
tools/ml_backend/: Dockerfile  docker-compose.yml
training/baseline/: baseline_dataset.py  yolo_dataset.py
training/baseline/mask2former/: Base-COCO-InstanceSegmentation.yaml  baseline_mask2former_dataset.py
training/baseline/maskrcnn/: baseline_mask_rcnn.py  baseline_mask_rcnn_dataset.py
training/baseline/yolo/: yolo_dataset_multicalss.py
training/deeplabv3/: data_convertion.py  train.py
training/mask2former/: create_training_data.py  mask2former_training.py  yolo_to_coco.py
training/road_yolo/: road_yolo_training.py
training/segformer/: create_training_data.py
training/yolo/: autodetection.py  best_hyperparameters.yaml  grounded-sam-2.py  show_annotation.py  training_hyperparamtertuning.py  yolo_predict.py  yolo_segmentation.py  yolo_tune.py
yolo_V11/: autodetection.py  best_hyperparameters.yaml  hyp_custom.yaml  yolo_predict.py  yolo_predict_one_image.py  yolo_segmentation.py  yolo_tune.py
yolo_V11/YOLO11/yolo11s-seg-m0102/: args.yaml
yolo_V11/YOLO11/yolo11s-seg-m0104/: args.yaml
yolo_V11/YOLO11/yolo11s-seg-m0106/: args.yaml
yolo_ml_backend/control_models/: polygon_labels.py
(+22 files in other folders)
