<?xml version="1.0"?>
<package format="3">
  <name>road_lines_msg</name>
  <version>0.0.0</version>
  <description>Messages for road lines (ROS 2)</description>

  <maintainer email="jakob@todo.todo">jakob</maintainer>
  <license>TODO</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Message generator dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
