<?xml version="1.0"?>
<package format="2">
  <name>road_lines_msg</name>
  <version>0.0.1</version>
  <description>The road_lines_msg package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
