<?xml version="1.0"?>
<package format="2">
  <name>road_lines_msg_ros1</name>
  <version>0.0.0</version>
  <description>Messages for road lines (ROS 1)</description>

  <maintainer email="jakob@todo.todo">jakob</maintainer>
  <license>TODO</license>

  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!-- Message generator dependencies -->
  <!--<build_depend>rosidl_default_generators</build_depend>-->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend>-->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group>-->

  <!-- Message dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <!--<exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- <exec_depend>sensor_msgs</exec_depend> -->
  <exec_depend>rospy</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
